kustomize/base/apps/webfront/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webfront-deployment
spec:
  template:
    spec:
      containers:
        - name: webfront
          image: registry.example.com/project/webfront:1.0
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 250m
              memory: 512Mi
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 60"]
