kustomize/base/apps/webfront/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webfront-svc
spec:
  clusterIP: None
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
