kustomize/base/apps/webfront/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webfront-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: web.dev.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webfront-svc
                port:
                  number: 8080
